--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   ],
   "author": "SATO taichi <ryushi@gmail.com>",
   "dependencies": {
-    "istanbul": "^0.4.0",
+    "istanbul": "^1.0.0-alpha2",
     "dateformat": "^1.0.6",
     "minimatch": "^3.0.0",
     "source-map": "^0.5.1"
